tests/sumo/spec/departure/errors/depart_unsorted/log.sumo
Loading net-file from 'net.net.xml' ... done (1ms).
Loading additional-files from 'input_routes.rou.xml' ... done (0ms).
Loading route-files incrementally from 'input_additional.add.xml'
Loading done.
Simulation version v1_26_0+1345-5ee8d27e481 started with time: 0.00.
Warning: Route file should be sorted by departure time, ignoring 'b'!
Warning: Teleporting vehicle 'd'; waited too long (blocked), lane='beg_2', time=75.00.
Warning: Vehicle 'd' ends teleporting on edge 'end', time=75.00.
Simulation ended at time: 154.00.
Reason: All vehicles have left the simulation.
